--- a/technical_analysis_sp500_GarciaA01016093.ipynb
+++ b/technical_analysis_sp500_GarciaA01016093.ipynb
@@ -2608,7 +2608,7 @@
    "id": "aa490329",
    "metadata": {},
    "source": [
-    "Not necessarily. As we can say in the graphs (in the title and in the graph shape per se), the prices present high volatility and the Golden Cross can be a \"expected\" behavior (because the volatility) and not a upward trend; i.e. it can have a upward trend in one day but going low in the next day."
+    "Not necessarily. As we can see in the graphs (in the title and in the graph shape per se), the prices present high volatility and the Golden Cross can be an \"expected\" behavior (because of the volatility) and not an upward trend; i.e. it can have an upward trend in one day but going low in the next day."
    ]
   },
   {
