--- a/news_embeddings_sp500_GarciaA01016093.ipynb
+++ b/news_embeddings_sp500_GarciaA01016093.ipynb
@@ -1333,6 +1333,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c25efdf7",
+   "metadata": {},
+   "source": [
+    "We can see in the graph, that the 3 clusters are well defined in a 2-dimension plot; however, we can also see that clusters are a little bit imbalanced and cluster 0 is overlapped with cluster 1. This can lead to false assumptions in our results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6b0dae3d",
    "metadata": {},
    "source": [
@@ -1735,6 +1743,8 @@
     "PCA is linear and may miss important patterns in embeddings. It is recommended to use a different dimensionality reduction methos like t-SNE or UMAP when the structure of the embeddings is nonlinear (which is common in semantic representations).\n",
     "\n",
     "Also, methods like UMAP handles high-dimensional, sparse data better, preserving the semantic context.\n",
+    "\n",
+    "Finally, for methods like t-SNE is known that represent in a better way a 2-dimension plot and can be better if we are gonna present the results to a C-level or business stakeholders.\n",
     "\n",
     "---\n",
     "\n",
