--- a/news_vector_store_sp500_GarciaA01016093.ipynb
+++ b/news_vector_store_sp500_GarciaA01016093.ipynb
@@ -2,6 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "41abaa62",
+   "metadata": {},
+   "source": [
+    "# 🎓 **Applied Artificial Intelligence Master**\n",
+    "\n",
+    "## 🤖 **Course: Fintech and Digital Innovation in Finance (Gpo 10)**\n",
+    "\n",
+    "### 🏛️ Tecnológico de Monterrey\n",
+    "\n",
+    "#### 👨‍🏫 **Lead Professor:** Marie-Ève Malette\n",
+    "#### 👩‍🏫 **Assistant Professor:** Yetnalezi Quintas Ruiz\n",
+    "\n",
+    "### 📊 **Project 2 Section A | Semantic Search and Vector Database on S&P 500 news**\n",
+    "\n",
+    "#### 📅 **August 1st, 2025**\n",
+    "\n",
+    "#### **Student:**\n",
+    "* 🧑‍💻 Oscar Enrique García García (A01016093)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4e231d13",
    "metadata": {},
    "source": [
