--- a/news_vector_store_sp500_GarciaA01016093.ipynb
+++ b/news_vector_store_sp500_GarciaA01016093.ipynb
@@ -1427,7 +1427,11 @@
    "id": "ce25f68f",
    "metadata": {},
    "source": [
-    "With the histogram above, we can conclude that many companies are making AI announcements in the last days"
+    "We can see that the top 50 articles are between March and May of this years. However, we can also see that they are strongly clustered around late May 2025, suggesting a recent wave of AI-related activity. \n",
+    "\n",
+    "One thing that comes to my mind is that this likely corresponds to tech companies major events (Google, Apple, AWS, Microsoft, etc.) that are presented around those dates.\n",
+    "\n",
+    "Another thing that comes to my mind is that the articles can also correspond to every closing quarter (March, May, etc.) that is when companies announce their results, their next objectives and what's coming up for the rest of the year.\n"
    ]
   },
   {
