--- a/news_vector_store_sp500_GarciaA01016093.ipynb
+++ b/news_vector_store_sp500_GarciaA01016093.ipynb
@@ -1427,7 +1427,7 @@
    "id": "ce25f68f",
    "metadata": {},
    "source": [
-    "We can see that the top 50 articles are between March and May of this years. However, we can also see that they are strongly clustered around late May 2025, suggesting a recent wave of AI-related activity. \n",
+    "We can see that the top 50 articles are between March and May of this year. However, we can also see that they are strongly clustered around late May 2025, suggesting a recent wave of AI-related activity. \n",
     "\n",
     "One thing that comes to my mind is that this likely corresponds to tech companies major events (Google, Apple, AWS, Microsoft, etc.) that are presented around those dates.\n",
     "\n",
